--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "trueskill"]
 	path = trueskill
-	url = git://github.com/springlobby/trueskill.git
+	url = git://github.com/renemilk/trueskill.git
