--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,11 +1,17 @@
-#Tue Feb 28 21:07:40 CET 2012
+#Wed Feb 29 16:18:59 CET 2012
 eclipse.preferences.version=1
+encoding//tasbot/customlog.py=utf-8
+encoding//website/db_entities.py=utf-8
 encoding//website/disqus.py=utf-8
 encoding//website/globe.py=utf-8
+encoding//website/main.py=utf-8
+encoding//website/match.py=utf-8
 encoding//website/plots.py=utf-8
+encoding//website/ranking.py=utf-8
 encoding//website/scoreboard.py=utf-8
 encoding//website/viewladder.py=utf-8
 encoding//website/viewmatch.py=utf-8
+encoding//website/viewplayer.py=utf-8
 encoding/db_entities.py=utf-8
 encoding/fakeoutput.py=utf-8
 encoding/laddermanager.py=utf-8
